k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sru-backend
spec:
  selector:
    app: sru-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
