k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sru-frontend
spec:
  selector:
    app: sru-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
