k8s/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sru-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sru-mongodb
  template:
    metadata:
      labels:
        app: sru-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: sru-mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sru-mongodb
spec:
  selector:
    app: sru-mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
